# pymini

./: Makefile.in  README.md  arduino.py  backplot.py  bug.h  configure  configure.ac  create-dmg  create_led.py  dispatch.cc  emc.h  emccanon.cc  fixture.py  ini.c  ini.h  led.py  lookup.c  motctl.c  pycircle.py  pyemc.py  pymini.c  pymini.desktop  pymini.py  pytest.c  rt-test.py  rtstepper.c  rtstepper.h  rtstepper.inf  rtstepper.ini  tc.c  tc.h  test_cancel.py  test_estop.py  tooltable.py  tp.c  tp.h  ui.c
doc/: pymini.html
plugin/: m190.py  m191.py  m192.py  m193.py  m194.py  m195.py  m196.py  m197.py  m3.py  m4.py  m5.py  m6.py  m7.py  m8.py  m9.py
rs274ngc/: canon.h  interp_array.cc  interp_convert.cc  interp_internal.cc  interp_read.cc  interpl.cc  rs274ngc_interp.h  rs274ngc_pre.cc
